<resources>
    <string name="app_name">Hospital Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Bottom Navigation Menu
    <string name="menu_home_title">Home</string>
    <string name="menu_my_appointment">My Appointment</string>
    <string name="menu_profile_title">Profile</string>

    //landing Page
    <string name="login_text_one">Hospital Management System</string>
    <string name="sign_in">Sign In</string>

    //login Page
    <string name="hospital_management">Hospital Management</string>
    <string name="login_page_subtitle">This is a Placeholder text</string>
    <string name="login_error_msg">Oh no! Your account or password is incorrect, please check again.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password!</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="you_don_t_have_an_account">You don’t have an account?</string>

    //create account page
    <string name="title_create_account">Create New Account</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_location">Your location</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="create_button_text">Continue</string>
    <string name="error_name">name can not be empty</string>
    <string name="error_email">Invalid email</string>
    <string name="error_number">Must be more then 11 letter</string>
    <string name="error_address">Must write your address</string>
    <string name="error_dob">Write your birth date</string>
    <string name="auth_massage">Authentication Successful</string>

    //forget password page
    <string name="recover">Please enter your Email so we can help you recover your password.</string>
    <string name="next">Next</string>

    //dash board page
    <string name="appointment">Appointment</string>
    <string name="ambulance">Ambulance</string>
    <string name="blood_bank">Blood Bank </string>
    <string name="doctor_list">Doctor list</string>
    <string name="medicine_store">Medicine store</string>
    <string name="prescription">Prescription</string>

    //profile page
    <string name="profile">Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="notification">Notification</string>
    <string name="blood_group">Blood Group</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you Sure?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    //doctor list page
    <string name="doctorName">Doctor Name</string>
    <string name="doctorSpecialization">Specialization</string>
    <string name="addDoctor">Add</string>
    <string name="doctorList">Doctor List</string>

    //add doctor page
    <string name="add_doctor">Add Doctor</string>
    <string name="doctor_name">name</string>
    <string name="doctor_specialization">Doctor Specialization</string>
    <string name="doctor_degree">Degree</string>
    <string name="doctor_studyInstuition">Doctor Study Instuition</string>
    <string name="doctor">Doctor Study Instuition</string>
    <string name="doctorEmail">Email</string>
    <string name="doctorPhoneNumber">Phone Number</string>
    <string name="btnSave">Save</string>

    //Doctor Details
    <string name="about_details">About Doctor</string>
    <string name="name">Name:</string>
    <string name="doctor_name_details">name</string>
    <string name="doctorEmailsDetails">Email:</string>
    <string name="doctorEmailsDetailsEt">email</string>
    <string name="doctorPhnDetails">Phone :</string>
    <string name="doctorPhnDetailsEt">phone number</string>
    <string name="doctorSpecialDetails">Specialization :</string>
    <string name="doctorSpecialDetailsEt">specialization </string>
    <string name="doctorDegreeDetails">Degree :</string>
    <string name="doctorDegreeDetailsEt">degree</string>
    <string name="doctorStudyInstuitionDetails">University : </string>
    <string name="doctorStudyInstuitionDetailsEt">university name</string>
    <string name="btnDoctorDetails">Delete</string>

    //Ambulance Page
    <string name="driver_name">Driver Name : </string>
    <string name="driver_name_tv">name </string>
    <string name="ambulance_licence_number">Licence Number : </string>
    <string name="ambulance_licence_number_tv">number </string>
    <string name="ambulance_title">Ambulance List</string>
    <string name="ambulance_location">Location: </string>
    <string name="ambulance_locationTv">location name</string>
    <string name="add_ambulance">Add</string>

    //Add Ambulance Page
    <string name="add_ambulance_title">Add Ambulance</string>
    <string name="ambulance_driver_name">driver name</string>
    <string name="ambulance_location_name">ambulance location</string>
    <string name="ambulance_plate_number">car number plate</string>
    <string name="phone_number_tx">phone number</string>

    //Ambulance Details Page
    <string name="ambulance_details">About Ambulance</string>
    <string name="ambulance_details_driver_nameTv">name</string>

    //Medicine List Page
    <string name="medicineTitle">Medicine List</string>
    <string name="mName">Name : </string>
    <string name="mNameN">name </string>
    <string name="mPrice">Price : </string>
    <string name="mPriceP">price</string>

    //Add Medicine
    <string name="add_medicine">Add Medicine</string>
    <string name="company">Company :</string>
    <string name="details">Details :</string>
    <string name="price">Price :</string>
    <string name="expire_date">Expire Date :</string>
    <string name="self">Self :</string>
    <string name="row">Row :</string>
    <string name="column">Column :</string>
    <string name="update_massage">Save Successfully</string>

    //Medicine Details
    <string name="about_medicine">About Medicine</string>
    <string name="medicine_name">Medicine name:</string>
    <string name="company_name">Company name:</string>
    <string name="medicine_price">Medicine Price</string>
    <string name="expire_medicine">Expire Medicine</string>
    <string name="self_no">Self no</string>
    <string name="row_no">Row no</string>
    <string name="column_no">Column no</string>
    <string name="medicine_details">Medicine details</string>

    //Blood Bank
    <string name="blood_bank_list">Blood Bank List</string>
    <string name="donor_name">Donor Name : </string>
    <string name="group">Group : </string>
    <string name="group_name">name </string>
    <string name="add_bloodBank"> Add Blood Bank </string>
    <string name="donor_nameEt"> donor name </string>
    <string name="donor_blood_group"> blood group type </string>
    <string name="contact_number">contact number</string>
    <string name="about_blood_bank">About Blood Bank</string>
    <string name="phone">Phone</string>

    //Prescription Page
    <string name="patient_name">Patient Name : </string>
    <string name="doctor_nameTv">Doctor Name : </string>
    <string name="prescribe">Prescription</string>



    //Appointment Page
    <string name="appointment_date">Appointment Date : </string>
    <string name="date">date</string>


</resources>